# igrep

./: .gitignore  CHANGELOG.md  README.md
igrep/: CMakeLists.txt  CMakePresets.json  igrep.cpp  igrep.h
igrep/include/: igrep.h
igrep/include/indexer/: FileIndexer.h  Index.h  Position.h
igrep/include/searcher/: SearchChain.h  SearchResult.h  Searcher.h
igrep/include/utils/: StringUtils.h
igrep/src/: igrep.cpp
igrep/src/indexer/: FileIndexer.cpp  FlleIndexer.cpp  Index.cpp
igrep/src/searcher/: Searcher.cpp
igrep/src/utils/: StringUtils.cpp
igrep/testdata/: external.txt  wiki_data.txt
igrep/testdata/internal/: internal.txt
igrep/tests/: test_file_indexer.cpp  test_index.cpp  test_searcher.cpp  test_string_utils.cpp
